--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/lisn.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -16,47 +17,157 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="fonts/stylesheet.css" type="text/css" charset="utf-8" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script>
+    function messageboard(a) {
+    $( "#msg"+a ).css("display","none" );
+    $( "#msg"+(a+3) ).css("display","block" );
+    $( "#msg"+(a+3)).css("float","left" );
+
+    if (a <= 6) {
+    setTimeout(function al(){messageboard((a+1));},5000);
+    }
+
+  }
+    </script>
+    <style>
+    .carousel-inner{
+      width:273px;
+      margin-left:22px;
+    }
+    .carousel-inner > .item > img,
+    .carousel-inner > .item > a > img {
+        position:abolsute;
+        top:50px;
+        width:251px;
+        margin-top:72px;
+        margin-left:72px;
+
+
+    }
+    </style>
   </head>
-  <body style="background:#006DC1">
+  <body style="background:#6967CE" onload="setTimeout(function al() { messageboard(1); },5000)">
     <div class="container">
 
       <div class="row">
           <div class="col-lg-4 col-xs-2" style="color:white; overflow:hidden; font-family:'Source Sans Pro', sans-serif;">
           </div>
           <div class="col-lg-4 col-xs-8" style="color:white; overflow:hidden; font-family:'Source Sans Pro', sans-serif;">
-              <center>    <img src="images/lisn.png" class="img-responsive" width="100%"  > </center>
+              <center>    <img src="images/lisn.png" class="img-responsive" width="413px" style="margin-top:40px"  > </center>
           </div>
           <div class="col-lg-4 col-xs-2" style="color:white; overflow:hidden; font-family:'Source Sans Pro', sans-serif;">
           </div>
       </div>
+
+
+
         <div class="row">
           <div class="col-lg-4 col-xs-2">
           </div>
           <div class="col-lg-1 col-xs-1">
           </div>
           <div class="col-lg-2 col-xs-6">
-              <center> <img src="images/app_store@2x.png" class="img-responsive" width="100%" > </center>
+
+              <center> <img src="images/app_store@2x.png" class="img-responsive" width="158px" style="margin:21px 0px 40px 0px"> </center>
           </div>
           <div class="col-lg-1 col-xs-1">
           </div>
           <div class="col-lg-4 col-xs-2">
           </div>
         </div>
+
+
         <div class="row">
+          <div class="col-lg-4 col-xs-1">
+            <div style="margin-top:132px; margin-left:180px;z-index:1000;">
+              <img src="images/christian@2x1.png" width="273px" z-index="1000">
+            </div>
+          </div>
+            <div class="col-lg-4 col-xs-8">
+
+              <div class="bg">
+                <img src="images/iphone@2x1.png" class="img-resposive" width="286px" style="margin:0px 52px 0px 52px">
+              </div>
+              <div id="myCarousel" class="carousel slide" data-ride="carousel">
+
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox" style="overflow:hidden">
+
+      <div class="item active">
+        <img src="http://i685.photobucket.com/albums/vv219/Metaltim/Feb%202011/image004-1.jpg" class="img-responsive"alt="Chania" width="251px" height="251px">
+
+      </div>
+
+
+
+      <div class="item">
+        <img src="https://upload.wikimedia.org/wikipedia/en/8/82/Soad_aerials_single.jpg" class="img-responsive"alt="Chania" width="251px" height="251px">
+
+      </div>
+
+      <div class="item">
+        <img src="http://cdn.thedailybeast.com/content/dailybeast/galleries/2014/06/28/best-selling-album-covers-reimagined-bob-dylan-kanye-west-and-more/jcr:content/gallery/1bc34799-fd5e-4194-a409-5b95382b04bb/image.img.410.273.jpg/46797402.cached.jpg" class="img-responsive"alt="Flower" width="251px" height="251px">
+
+      </div>
+
+      <div class="item">
+        <img src="http://static.wixstatic.com/media/5211d8_d0bae92862a14355b176b489109346af.jpg_srz_273_273_85_22_0.50_1.20_0.00_jpg_srz" class="img-responsive"alt="Flower" width="251px" height="251px">
+
+      </div>
+
+    </div>
+  </div>
+
+<div style="width:247px;margin-left:72px; height:188px;background:white;">
+<div class="message"  id="msg1" style="display:block"> <div class="test">This one is super old though</div><div class="arrow1"></div><div class="arrow2"></div></div>
+<div class="message"  id="msg2" style="display:block"> <div class="test">Killing it J! Straight FYAAH</div><div class="arrow1"></div><div class="arrow2"></div></div>
+<div class="message"  id="msg3" style="display:block"> <div class="test">Oh my god! I love this fucking track. Remember Coachella?</div><div class="arrow1"></div><div class="arrow2"></div></div>
+<div class="message"  id="msg4" style="display:none"> <div class="test">Ya that was so much fun</div><div class="arrow1"></div><div class="arrow2"></div></div>
+<div class="message"  id="msg5" style="display:none"> <div class="test">How about this track though</div><div class="arrow1"></div><div class="arrow2"></div></div>
+<div class="message"  id="msg6" style="display:none"> <div class="test">Nice. I've heard a couple of his tracks though</div><div class="arrow1"></div><div class="arrow2"></div></div>
+<div class="message"  id="msg7" style="display:none"> <div class="test">He's is playing at Warfield in a weeks right?</div><div class="arrow1"></div><div class="arrow2"></div></div>
+<div class="message"  id="msg8" style="display:none"> <div class="test">Wanna go check it out</div><div class="arrow1"></div><div class="arrow2"></div></div>
+<div class="message"  id="msg9" style="display:none"> <div class="test">Let's do it</div><div class="arrow1"></div><div class="arrow2"></div></div>
+</div></div>
+
           <div class="col-lg-4 col-xs-2">
+          <div style="margin-top:132px; margin-left:-60px;z-index:1000;overflow:hidden">
+            <img src="images/christian@2xy.png"  class="img-responsive" width="273px" z-index="1000">
           </div>
-          <div class="col-lg-4 col-xs-8">
-              <center>    <img src="images/iphone@2x.png" class="img-responsive" width="100%"  > </center>
-          </div>
-          <div class="col-lg-4 col-xs-2">
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-12 col-xs-12" style="color:white; overflow:hidden; font-family:'Source Sans Pro', sans-serif;">
-            nirbhay
           </div>
         </div>
 
+</div>
+<div class="container-fluid" style="margin-top:10px;">
+
+        <div class="row" style="background:#4E4DA7;border:solid #8A88E3 1px;">
+          <div class="col-lg-6 col-xs-12" style="color:white;  margin:39px 0px 48px 48px; overflow:hidden; font-family: 'solomon_normalregular'; font-size:24px;">
+            <span style="font-family: 'solomon_normalregular'; font-size:24px;"> We’re currently in private beta.<br></span>
+                      <span style="font-family: 'solomon_normalregular'; font-size:24px;">Sign up to be notified about the launch!</span>
+          </div>
+
+          <div class="col-lg-4 col-xs-12" style="color:white; overflow:hidden; margin:10px auto; font-family: 'solomon_normalregular'; font-size:24px;">
+                <input type="text" placeholder="john@example.com" style="font-size:24px;margin-top:47px;color:black; width:300px; height:47px;">
+            <button type="button" class="btn btn-default">Default</button>
+          </div>
+        </div>
+
+</div>
+<div class="container-fluid" style="6967CE">
+    <center><h1>nirbhay<h1></center>
+</div>
+<div class="container-fluid">
+    <center><h1>nirbhay<h1></center>
+</div>
+<div class="container-fluid">
+    <center><h1>nirbhay<h1></center>
 </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
