removing the white background

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     </div>
   </div>
 
-<div style="width:247px;margin-left:72px; height:188px;background:white;">
+<div style="width:247px;margin-left:72px; height:188px;">
 <div class="message"  id="msg1" style="display:block"> <div class="test">This one is super old though</div><div class="arrow1"></div><div class="arrow2"></div></div>
 <div class="message"  id="msg2" style="display:block"> <div class="test">Killing it J! Straight FYAAH</div><div class="arrow1"></div><div class="arrow2"></div></div>
 <div class="message"  id="msg3" style="display:block"> <div class="test">Oh my god! I love this fucking track. Remember Coachella?</div><div class="arrow1"></div><div class="arrow2"></div></div>
