--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     setTimeout(function al(){messageboard((a+1));},5000);
     }
 
-  }
+    }
     </script>
     <style>
     .carousel-inner{
@@ -53,9 +53,9 @@
     </style>
   </head>
   <body style="background:#6967CE" onload="setTimeout(function al() { messageboard(1); },5000)">
-    <div class="container">
+      <div class="container">
 
-      <div class="row">
+        <div class="row">
           <div class="col-lg-4 col-xs-2" style="color:white; overflow:hidden; font-family:'Source Sans Pro', sans-serif;">
           </div>
           <div class="col-lg-4 col-xs-8" style="color:white; overflow:hidden; font-family:'Source Sans Pro', sans-serif;">
@@ -63,9 +63,7 @@
           </div>
           <div class="col-lg-4 col-xs-2" style="color:white; overflow:hidden; font-family:'Source Sans Pro', sans-serif;">
           </div>
-      </div>
-
-
+        </div>
 
         <div class="row">
           <div class="col-lg-4 col-xs-2">
@@ -82,89 +80,85 @@
           </div>
         </div>
 
-
         <div class="row">
-          <div class="col-lg-4 col-xs-1">
+          <div class="col-lg-4 col-xs-2">
             <div style="margin-top:132px; margin-left:180px;z-index:1000;">
-              <img src="images/christian@2x1.png" width="273px" z-index="1000">
+              <img src="images/christian@2x1.png"  class="img-responsive" width="273px">
             </div>
           </div>
-            <div class="col-lg-4 col-xs-8">
+          <div class="col-lg-4 col-xs-8">
 
               <div class="bg">
-                <img src="images/iphone@2x1.png" class="img-resposive" width="286px" style="margin:0px 52px 0px 52px">
+                <img src="images/iphone@2x1.png" class="img-responsive" width="360px" style="padding:0px 42px 0px 42px">
               </div>
               <div id="myCarousel" class="carousel slide" data-ride="carousel">
 
 
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox" style="overflow:hidden">
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner" role="listbox" style="overflow:hidden">
 
-      <div class="item active">
-        <img src="http://i685.photobucket.com/albums/vv219/Metaltim/Feb%202011/image004-1.jpg" class="img-responsive"alt="Chania" width="251px" height="251px">
+                  <div class="item active">
+                    <img src="http://i685.photobucket.com/albums/vv219/Metaltim/Feb%202011/image004-1.jpg" class="img-responsive"alt="Chania" width="251px" height="251px">
 
-      </div>
+                  </div>
+
+                  <div class="item">
+                    <img src="https://upload.wikimedia.org/wikipedia/en/8/82/Soad_aerials_single.jpg" class="img-responsive"alt="Chania" width="251px" height="251px">
+                  </div>
+
+                  <div class="item">
+                    <img src="http://cdn.thedailybeast.com/content/dailybeast/galleries/2014/06/28/best-selling-album-covers-reimagined-bob-dylan-kanye-west-and-more/jcr:content/gallery/1bc34799-fd5e-4194-a409-5b95382b04bb/image.img.410.273.jpg/46797402.cached.jpg" class="img-responsive"alt="Flower" width="251px" height="251px">
+                  </div>
+
+                  <div class="item">
+                    <img src="http://static.wixstatic.com/media/5211d8_d0bae92862a14355b176b489109346af.jpg_srz_273_273_85_22_0.50_1.20_0.00_jpg_srz" class="img-responsive"alt="Flower" width="251px" height="251px">
+                  </div>
+
+                </div>
 
 
+              </div>
 
-      <div class="item">
-        <img src="https://upload.wikimedia.org/wikipedia/en/8/82/Soad_aerials_single.jpg" class="img-responsive"alt="Chania" width="251px" height="251px">
-
-      </div>
-
-      <div class="item">
-        <img src="http://cdn.thedailybeast.com/content/dailybeast/galleries/2014/06/28/best-selling-album-covers-reimagined-bob-dylan-kanye-west-and-more/jcr:content/gallery/1bc34799-fd5e-4194-a409-5b95382b04bb/image.img.410.273.jpg/46797402.cached.jpg" class="img-responsive"alt="Flower" width="251px" height="251px">
-
-      </div>
-
-      <div class="item">
-        <img src="http://static.wixstatic.com/media/5211d8_d0bae92862a14355b176b489109346af.jpg_srz_273_273_85_22_0.50_1.20_0.00_jpg_srz" class="img-responsive"alt="Flower" width="251px" height="251px">
-
-      </div>
-
-    </div>
-  </div>
-
-<div style="width:247px;margin-left:72px; height:188px;">
-<div class="message"  id="msg1" style="display:block"> <div class="test">This one is super old though</div><div class="arrow1"></div><div class="arrow2"></div></div>
-<div class="message"  id="msg2" style="display:block"> <div class="test">Killing it J! Straight FYAAH</div><div class="arrow1"></div><div class="arrow2"></div></div>
-<div class="message"  id="msg3" style="display:block"> <div class="test">Oh my god! I love this fucking track. Remember Coachella?</div><div class="arrow1"></div><div class="arrow2"></div></div>
-<div class="message"  id="msg4" style="display:none"> <div class="test">Ya that was so much fun</div><div class="arrow1"></div><div class="arrow2"></div></div>
-<div class="message"  id="msg5" style="display:none"> <div class="test">How about this track though</div><div class="arrow1"></div><div class="arrow2"></div></div>
-<div class="message"  id="msg6" style="display:none"> <div class="test">Nice. I've heard a couple of his tracks though</div><div class="arrow1"></div><div class="arrow2"></div></div>
-<div class="message"  id="msg7" style="display:none"> <div class="test">He's is playing at Warfield in a weeks right?</div><div class="arrow1"></div><div class="arrow2"></div></div>
-<div class="message"  id="msg8" style="display:none"> <div class="test">Wanna go check it out</div><div class="arrow1"></div><div class="arrow2"></div></div>
-<div class="message"  id="msg9" style="display:none"> <div class="test">Let's do it</div><div class="arrow1"></div><div class="arrow2"></div></div>
-</div></div>
-
-          <div class="col-lg-4 col-xs-2">
-          <div style="margin-top:132px; margin-left:-60px;z-index:1000;overflow:hidden">
-            <img src="images/christian@2xy.png"  class="img-responsive" width="273px" z-index="1000">
+              <div style="width:247px;margin-left:72px; height:188px;">
+                <div class="message"  id="msg1" style="display:block"> <div class="test">This one is super old though</div><div class="arrow1"></div><div class="arrow2"></div></div>
+                <div class="message"  id="msg2" style="display:block"> <div class="test">Killing it J! Straight FYAAH</div><div class="arrow1"></div><div class="arrow2"></div></div>
+                <div class="message"  id="msg3" style="display:block"> <div class="test">Oh my god! I love this fucking track. Remember Coachella?</div><div class="arrow1"></div><div class="arrow2"></div></div>
+                <div class="message"  id="msg4" style="display:none"> <div class="test">Ya that was so much fun</div><div class="arrow1"></div><div class="arrow2"></div></div>
+                <div class="message"  id="msg5" style="display:none"> <div class="test">How about this track though</div><div class="arrow1"></div><div class="arrow2"></div></div>
+                <div class="message"  id="msg6" style="display:none"> <div class="test">Nice. I've heard a couple of his tracks though</div><div class="arrow1"></div><div class="arrow2"></div></div>
+                <div class="message"  id="msg7" style="display:none"> <div class="test">He's is playing at Warfield in a weeks right?</div><div class="arrow1"></div><div class="arrow2"></div></div>
+                <div class="message"  id="msg8" style="display:none"> <div class="test">Wanna go check it out</div><div class="arrow1"></div><div class="arrow2"></div></div>
+                <div class="message"  id="msg9" style="display:none"> <div class="test">Let's do it</div><div class="arrow1"></div><div class="arrow2"></div></div>
+              </div>
           </div>
+          <div class="col-lg-4 col-xs-2">
+                  <div style="margin-top:132px; margin-left:-60px;z-index:1000;overflow:hidden">
+                    <img src="images/christian@2xy.png"  class="img-responsive" width="273px" z-index="1000">
+                  </div>
           </div>
         </div>
 
-</div>
-<div class="container-fluid" style="margin-top:10px;">
+      </div>
+      <div class="container-fluid">
 
         <div class="row" style="background:#4E4DA7;border:solid #8A88E3 1px;">
-          <div class="col-lg-6 col-xs-12" style="color:white;  margin:39px 0px 48px 48px; overflow:hidden; font-family: 'solomon_normalregular'; font-size:24px;">
+          <div class="col-lg-6 col-xs-12" style="color:white;  padding:39px 0px 48px 48px; overflow:hidden; font-family: 'solomon_normalregular'; font-size:24px;">
             <span style="font-family: 'solomon_normalregular'; font-size:24px;"> We’re currently in private beta.<br></span>
                       <span style="font-family: 'solomon_normalregular'; font-size:24px;">Sign up to be notified about the launch!</span>
           </div>
 
-          <div class="col-lg-4 col-xs-12" style="color:white; overflow:hidden; margin:10px auto; font-family: 'solomon_normalregular'; font-size:24px;">
-                <input type="text" placeholder="john@example.com" style="font-size:24px;margin-top:47px;color:black; width:300px; height:47px;">
-            <button type="button" class="btn btn-default">Default</button>
+          <div class="col-lg-6 col-xs-12" style="color:white; overflow:hidden; padding:43px 55px 57px 0px; font-family: 'solomon_normalregular'; font-size:24px;">
+              <div style="float:right;background:white;padding:0 auto; border-radius:4px; ">  <input type="text" placeholder="EMAIL ADDRESS" style="font-size:12px;color:black;border-radius:4px; border:none; padding-left:16px; width:300px; height:47px;">
+            <button type="button" class="btn btn-default" style="height:39px;border:none; background:#F5A623; margin-top:4px;margin-right:2px;">Sign up</button></div>
           </div>
         </div>
 
-</div>
+      </div>
 
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+      <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+      <!-- Include all compiled plugins (below), or include individual files as needed -->
+      <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
