--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Bootstrap 101 Template</title>
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/lisn.css" rel="stylesheet">
@@ -23,9 +24,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="js/jquery-ui-1.11.4.custom/jquery-ui.js"></script>
     <script>
     function messageboard(a) {
-    $( "#msg"+a ).css("display","none" );
+      options={};
+    $( "#msg"+a ).effect("fade",options,500);
     $( "#msg"+(a+3) ).css("display","block" );
     $( "#msg"+(a+3)).css("float","left" );
 
@@ -134,7 +137,7 @@
           <div class="col-lg-4 col-xs-2">
                   <div style="margin-top:132px; margin-left:-60px;z-index:1000;overflow:hidden">
                     <img src="images/christian@2xy.png"  class="img-responsive" width="273px" z-index="1000">
-                  </div>
+
           </div>
         </div>
 
