--- a/jq.html
+++ b/jq.html
@@ -1,60 +1,87 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>Demo</title>
+  <meta charset="utf-8">
+  <title>jQuery UI Effects - Effect demo</title>
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+  <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+  <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+  <link rel="stylesheet" href="/resources/demos/style.css">
+  <style>
+    .toggler { width: 500px; height: 200px; position: relative; }
+    #button { padding: .5em 1em; text-decoration: none; }
+    #effect { width: 240px; height: 135px; padding: 0.4em; position: relative; }
+    #effect h3 { margin: 0; padding: 0.4em; text-align: center; }
+    .ui-effects-transfer { border: 2px dotted gray; }
+  </style>
+  <script>
+  $(function() {
+    // run the currently selected effect
+    function runEffect() {
+      // get effect type from
+      var selectedEffect = $( "#effectTypes" ).val();
 
-    <style>
-    .message {
-      margin:100px auto;
-      padding:0 auto;
-      max-width:87px;
-      height:15px;
-      background:#white;
-      z-index:10000;
-    }
-    .message .test{
-      border-radius:2px;
-      width:80px;
-      height:15px;
-      background:#006DC1;
-      font-family:Arial;
-      font-size:4px;
-      color:white;
-      padding:2px 1px 1px 2px;
-      position:relative;
-      display:block;
-      margin:0 auto;
-      overflow:hidden;
-      float:left;
-    }
-    .message .arrow1 {
-      border-right: 3px solid transparent;
-      border-bottom: 3px solid #006DC1;
-      position:relative;
-      margin:6px 1px 0 0;
-      padding:0 auto;
-      width:0px;
-      height:0px;
-      display:block;
-      float:left;
-    }
-    .message .arrow2 {
-      border-right: 3px solid transparent;
-      border-top: 3px solid #006DC1;
-      position:relative;
-      margin:0 auto;
-      padding:0 auto;
-      width:0px;
-      height:0px;
-      display:block;
-      float:left;
-    }
-    </style>
+      // most effect types need no options passed by default
+      var options = {};
+      // some effects have required parameters
+      if ( selectedEffect === "scale" ) {
+        options = { percent: 0 };
+      } else if ( selectedEffect === "transfer" ) {
+        options = { to: "#button", className: "ui-effects-transfer" };
+      } else if ( selectedEffect === "size" ) {
+        options = { to: { width: 200, height: 60 } };
+      }
+
+      // run the effect
+      $( "#effect" ).effect( selectedEffect, options, 500, callback );
+    };
+
+    // callback function to bring a hidden box back
+    function callback() {
+      setTimeout(function() {
+        $( "#effect" ).removeAttr( "style" ).hide().fadeIn();
+      }, 1000 );
+    };
+
+    // set effect from select menu value
+    $( "#button" ).click(function() {
+      runEffect();
+      return false;
+    });
+  });
+  </script>
 </head>
-<body style="background:transparent">
-    <div class="message"> <div class="test">Nirbhay gupta is amazing and he loves life more than anything</div><div class="arrow1"></div><div class="arrow2"></div></div>
+<body>
 
-    </script>
+<div class="toggler">
+  <div id="effect" class="ui-widget-content ui-corner-all">
+    <h3 class="ui-widget-header ui-corner-all">Effect</h3>
+    <p>
+      Etiam libero neque, luctus a, eleifend nec, semper at, lorem. Sed pede. Nulla lorem metus, adipiscing ut, luctus sed, hendrerit vitae, mi.
+    </p>
+  </div>
+</div>
+
+<select name="effects" id="effectTypes">
+  <option value="blind">Blind</option>
+  <option value="bounce">Bounce</option>
+  <option value="clip">Clip</option>
+  <option value="drop">Drop</option>
+  <option value="explode">Explode</option>
+  <option value="fade">Fade</option>
+  <option value="fold">Fold</option>
+  <option value="highlight">Highlight</option>
+  <option value="puff">Puff</option>
+  <option value="pulsate">Pulsate</option>
+  <option value="scale">Scale</option>
+  <option value="shake">Shake</option>
+  <option value="size">Size</option>
+  <option value="slide">Slide</option>
+  <option value="transfer">Transfer</option>
+</select>
+
+<button id="button" class="ui-state-default ui-corner-all">Run Effect</button>
+
+
 </body>
 </html>
