fixing the footer

--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
         </div>
 
       </div>
+    </div>
       <div class="container-fluid">
 
         <div class="row" style="background:#4E4DA7;border:solid #8A88E3 1px;">
