--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="fonts/stylesheet.css" type="text/css" charset="utf-8" />
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+    <script src="js/jquery-ui-1.11.4.custom/jquery-ui.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
@@ -29,7 +29,7 @@
     <script>
     function messageboard(a) {
       options={};
-    $( "#msg"+a ).effect("fade",options,500);
+    $( "#msg"+a ).hide( "drop", { direction: "down" }, "slow" );
     $( "#msg"+(a+3) ).css("display","block" );
     $( "#msg"+(a+3)).css("float","left" );
 
