--- a/jq.html
+++ b/jq.html
@@ -15,7 +15,7 @@
     // run the currently selected effect
     function runEffect() {
       // run the effect
-      $( "#msg1" ).effect( "blind", options, 500, callback );
+      $( "#msg1" ).effect( "blind",500);
     };
 
     // callback function to bring a hidden box back
