--- a/jq.html
+++ b/jq.html
@@ -12,10 +12,11 @@
   </style>
   <script>
   $(function() {
+    var a=1;
     // run the currently selected effect
     function runEffect() {
       // run the effect
-      $( "#msg1" ).effect( "blind",500);
+      $( "#msg"+a ).effect( "blind",500);
     };
 
     // callback function to bring a hidden box back
@@ -28,6 +29,7 @@
     // set effect from select menu value
     $( "#button" ).click(function() {
       runEffect();
+      a+=1;
       return false;
     });
   });
