--- a/jq.html
+++ b/jq.html
@@ -17,7 +17,7 @@
     // run the currently selected effect
     function runEffect() {
       // run the effect
-      $( "#msg"+a ).effect( "blind",500);
+      $( "#msg"+a ).effect( "fade",500);
     };
 
     // callback function to bring a hidden box back
