--- a/jq.html
+++ b/jq.html
@@ -21,13 +21,6 @@
       $( "#msg"+(a+1) ).css( "display","block",500);
     };
 
-    // callback function to bring a hidden box back
-    function callback() {
-      setTimeout(function() {
-        $( "#msg1" ).removeAttr( "style" ).hide().fadeIn();
-      }, 1000 );
-    };
-
     // set effect from select menu value
     if (a<=9) {
     setInterval(function() { runEffect();  a+=1;  return false;  },3000);
@@ -45,11 +38,11 @@
   <div class="message ui-widget-content ui-corner-all"  id="msg1" style="display:block"> <div class="test">This one is super old though</div><div class="arrow1"></div><div class="arrow2"></div></div>
   <div class="message ui-widget-content ui-corner-all"  id="msg2" style="display:block; float:left; background:transparent; border:1px solid #006DC1 "> <div class="test" style="background:transparent;color:#006CD1">Killing it J! Straight FYAAH</div><div class="arrow1"></div><div class="arrow2"></div></div>
   <div class="message ui-widget-content ui-corner-all"  id="msg3" style="display:block"> <div class="test">Oh my god! I love this fucking track. Remember Coachella?</div><div class="arrow1"></div><div class="arrow2"></div></div>
-  <div class="message ui-widget-content ui-corner-all"  id="msg4" style="display:none float:left; background:transparent; border:1px solid #006DC1  "> <div class="test" style="background:transparent;color:#006CD1">Ya that was so much fun</div><div class="arrow1"></div><div class="arrow2"></div></div>
+  <div class="message ui-widget-content ui-corner-all"  id="msg4" style="display:none; float:left; background:transparent; border:1px solid #006DC1  "> <div class="test" style="background:transparent;color:#006CD1">Ya that was so much fun</div><div class="arrow1"></div><div class="arrow2"></div></div>
   <div class="message ui-widget-content ui-corner-all"  id="msg5" style="display:none"> <div class="test">How about this track though</div><div class="arrow1"></div><div class="arrow2"></div></div>
-  <div class="message ui-widget-content ui-corner-all"  id="msg6" style="display:none float:left; background:transparent; border:1px solid #006DC1 "> <div class="test" style="background:transparent;color:#006CD1">Nice. I've heard a couple of his tracks though</div><div class="arrow1"></div><div class="arrow2"></div></div>
+  <div class="message ui-widget-content ui-corner-all"  id="msg6" style="display:none; float:left; background:transparent; border:1px solid #006DC1 "> <div class="test" style="background:transparent;color:#006CD1">Nice. I've heard a couple of his tracks though</div><div class="arrow1"></div><div class="arrow2"></div></div>
   <div class="message ui-widget-content ui-corner-all"  id="msg7" style="display:none"> <div class="test">He's is playing at Warfield in a weeks right?</div><div class="arrow1"></div><div class="arrow2"></div></div>
-  <div class="message ui-widget-content ui-corner-all"  id="msg8" style="display:none float:left; background:transparent; border:1px solid #006DC1 "> <div class="test" style="background:transparent;color:#006CD1">Wanna go check it out</div><div class="arrow1"></div><div class="arrow2"></div></div>
+  <div class="message ui-widget-content ui-corner-all"  id="msg8" style="display:none; float:left; background:transparent; border:1px solid #006DC1 "> <div class="test" style="background:transparent;color:#006CD1">Wanna go check it out</div><div class="arrow1"></div><div class="arrow2"></div></div>
   <div class="message ui-widget-content ui-corner-all"  id="msg9" style="display:none"> <div class="test">Let's do it</div><div class="arrow1"></div><div class="arrow2"></div></div>
 </div>
 
