--- a/jq.html
+++ b/jq.html
@@ -26,7 +26,7 @@
     setInterval(function() { runEffect();  a+=1;  return false;  },3000);
   }
   else
-  clearInterval();
+    setInterval(function() { runEffect();  a=1;  return false;  },3000);
   });
   </script>
 </head>
