--- a/jq.html
+++ b/jq.html
@@ -18,7 +18,7 @@
     function runEffect() {
       // run the effect
       $( "#msg"+a ).effect( "fade",500);
-      $( "#msg"+(a+3) ).css( "display","block",500);
+    setTimeout( function(){  $( "#msg"+(a+3) ).css( "display","block");},500)
     };
 
     // set effect from select menu value
