--- a/drop.html
+++ b/drop.html
@@ -21,7 +21,7 @@
 
 <script>
 $( document ).click(function() {
-  $( "#toggle" ).toggle( "drop" );
+  $( "#toggle" ).toggle( "drop","up" );
 });
 </script>
 
