--- a/drop.html
+++ b/drop.html
@@ -21,7 +21,7 @@
 
 <script>
 $( document ).click(function() {
-  $( "#toggle" ).toggle( "drop",{direction,"up"},500);
+  $( "#toggle" ).toggle( "drop",{direction:"up"},500);
 });
 </script>
 
