--- a/jq.html
+++ b/jq.html
@@ -17,7 +17,7 @@
     // run the currently selected effect
     function runEffect() {
       // run the effect
-      $( "#msg"+ a ).toggle( "drop",{direction:"up"}500);
+      $( "#msg"+ a ).toggle( "drop",{direction:"up"},500);
     setTimeout( function(){  $( "#msg"+(a+3) ).toggle( "drop",{direction:"up"}500);},500)
     };
 
