--- a/jq.html
+++ b/jq.html
@@ -18,7 +18,7 @@
     function runEffect() {
       // run the effect
       $( "#msg"+ a ).toggle( "drop",{direction:"up"},500);
-    setTimeout( function(){  $( "#msg"+(a+3) ).toggle( "drop",{direction:"up"}500);},500)
+    setTimeout( function(){  $( "#msg"+(a+3) ).toggle( "drop",{direction:"up"},500);},500)
     };
 
     // set effect from select menu value
