--- a/jq.html
+++ b/jq.html
@@ -25,9 +25,9 @@
     if (a<=9) {
     setInterval(function() { runEffect();  a+=1;  return false;  },3000);
   }
-  else {
+  else { a=1;
     clearInterval();
-    setInterval(function() { runEffect();  a=1;  return false;  },3000);
+    setInterval(function() { runEffect(); return false;  },3000);
 }
   });
   </script>
