--- a/jq.html
+++ b/jq.html
@@ -25,7 +25,7 @@
     if (a<=9) {
     setInterval(function() { runEffect();  a+=1;  return false;  },3000);
   }
-  else { a=1;
+  else {
     clearInterval();
   }; }          );
   </script>
