--- a/jq.html
+++ b/jq.html
@@ -23,7 +23,7 @@
 
     // set effect from select menu value
     if (a<=9) {
-    setInterval(function() { runEffect();  a+=1;  return false;  },3000);
+    setInterval(function() { runEffect();  a=a+1;  return false;  },3000);
   }
   else {
     clearInterval();
