--- a/jq.html
+++ b/jq.html
@@ -64,7 +64,7 @@
     <div class="test">He's is playing at Warfield in a weeks right?</div><div class="arrow1"></div>
     <div class="arrow2"></div>
   </div>
-  <div class="message ui-widget-content ui-corner-all"  id="msg8" style="display:none; float:left; background:transparent; border:1px solid #006DC1 ">
+  <div class="message ui-widget-content ui-corner-all"  id="msg8" style="display:none; float:left; background:transparent;  ">
     <div class="test" style="background:transparent;color:#006CD1;border:1px solid #006DC1">Wanna go check it out</div>
     <div class="arrow1"></div><div class="arrow2"></div>
   </div>
