--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <script>
     $(function() {
@@ -30,7 +31,7 @@
       function runEffect() {
         // run the effect
         $( "#msg"+ a ).toggle( "drop",{direction:"up"},500);
-      setTimeout( function(){  $( "#msg"+(a+3) ).toggle( "drop",{direction:"down"},500);},500)
+      setTimeout( function(){  $( "#msg"+(a+2) ).toggle( "drop",{direction:"down"},500);},500)
       };
 
       // set effect from select menu value
