--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       function runEffect() {
         // run the effect
         $( "#msg"+ a ).toggle( "drop",{direction:"up"},500);
-      setTimeout( function(){  $( "#msg"+(a+2) ).toggle( "drop",{direction:"down"},500);},500)
+      setTimeout( function(){  $( "#msg"+(a+2) ).toggle( "drop",{direction:"down"},500);},500);
       };
 
       // set effect from select menu value
@@ -142,7 +142,7 @@
                    <div class="test">Oh my god! I love this fucking track. Remember Coachella?</div>
                    <div class="arrow1"></div><div class="arrow2"></div>
                  </div>
-                <div class="message ui-widget-content ui-corner-all"  id="msg4" style="display:none; float:left; background:transparent; border:1px solid #006DC1  ">
+                <div class="message ui-widget-content ui-corner-all"  id="msg4" style="display:none; float:left; background:transparent; border:1px solid #006DC1 ">
                    <div class="test" style="background:transparent;color:#006CD1">Ya that was so much fun</div>
                    <div class="arrow1"></div><div class="arrow2"></div>
                  </div>
