--- a/jq.html
+++ b/jq.html
@@ -33,7 +33,7 @@
 </head>
 <body>
 
-  <div style="width:247px;margin-left:60px; height:188px;">
+  <div style="width:247px;margin-left:60px; height:188px;background:red;>
 
     <div class="message ui-widget-content ui-corner-all"  id="msg1">
       <div class="test">This one is super old though</div>
