--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
 
 
-              <div style="width:247px;margin-left:60px; height:188px; overflow:hidden,boder-top:solid 2px #6967CE">
+              <div style="width:247px;margin-left:60px; height:188px; overflow:hidden;boder-top:solid 2px #6967CE">
 
                 <div class="message ui-widget-content ui-corner-all"  id="msg1">
                   <div class="test">This one is super old though</div>
