--- a/index.html
+++ b/index.html
@@ -85,19 +85,19 @@
 
       <div class="carouse">
           <div class="carouse-inner">
-                  <div class="pic" style="margin-left:0px; width:245px;" class="img-responsive">
+                  <div class="pic" style="margin-left:0px;" class="img-responsive">
                     <img src="http://i685.photobucket.com/albums/vv219/Metaltim/Feb%202011/image004-1.jpg" >
                  </div>
 
-                  <div class="pic" style="margin-left:0px; width:245px;">
+                  <div class="pic" style="margin-left:0px;">
                     <img src="https://upload.wikimedia.org/wikipedia/en/8/82/Soad_aerials_single.jpg" class="img-responsive">
                   </div>
 
-                  <div class="pic" style="margin-left:0px;width:245px;">
+                  <div class="pic" style="margin-left:0px;">
                     <img src="http://cdn.thedailybeast.com/content/dailybeast/galleries/2014/06/28/best-selling-album-covers-reimagined-bob-dylan-kanye-west-and-more/jcr:content/gallery/1bc34799-fd5e-4194-a409-5b95382b04bb/image.img.410.273.jpg/46797402.cached.jpg" clas="img-responsive">
                   </div>
 
-                  <div class="pic" style="margin-left:0px; width:245px;">
+                  <div class="pic" style="margin-left:0px;">
                     <img src="http://static.wixstatic.com/media/5211d8_d0bae92862a14355b176b489109346af.jpg_srz_273_273_85_22_0.50_1.20_0.00_jpg_srz"class="img-responsive" >
                   </div>
              </div>
