--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="container">
 
         <div class="row">
-          <div class="col-lg-12 col-xs-12" style="color:white; overflow:hidden; font-family:'Source Sans Pro', sans-serif;">
+          <div class="col-lg-12 col-xs-12">
               <center>    <img src="images/lisn.png" class="img-responsive" width="413px" style="margin-top:40px"  > </center>
           </div>
         </div>
@@ -64,26 +64,28 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-4 col-sm-3 col-md-2 col-xs-0">
+          <div class="col-lg-4 col-sm-4 col-md-4 col-xs-0">
           </div>
-          <div class="col-lg-4 col-sm-6 col-md-8 col-xs-12">
+          <div class="col-lg-4 col-sm-4 col-md-4 col-xs-12">
 
-            <div style="margin-top:132px; margin-left:-225px; position:absolute;z-index:1000; width:300px;overflow:hidden">
+            <div id="imgleft">
               <img src="images/christian@2x1.png"  class="img-responsive" width="273px">
             </div>
 
-              <div style="margin-top:132px; margin-left:314px; position:absolute;z-index:1000; max-width:225px;overflow:hidden">
-              <img src="images/christian@2xy.png"  width="273px" >
+            <div id="imgright">
+              <img src="images/christian@2xy.png" width="273px" >
             </div>
-              <div class="bg">
-                <center><img src="images/iphone@2x1.png" class="img-responsive" width="360px" style="padding:0px 37px 0px 37px;"></center>
+              <div class="bg" id="iphone">
+                <center><img src="images/iphone@2x1.png" class="img-responsive" width="286px"></center>
               </div>
-              <div class="bg" style="top:30px; left:155px;"><img src="images/dots@2x.png" class="img-responsive" width="80px" ></div>
-              <div class="bg" style="top:0px; left:287px;"><input type="image" id="mute" value="pause" src="images/mute@2x.png" class="img-responsive" width="43px" height:"43px"/></div>
-      <div class="carouse">
-        <div style="position:absolute;  width:243px; text-align:center; top:270px; margin:0 auto; font-family:'solomon_normalregular'; font-weight:800; font-size:24px;color:white;z-index:1000000;">Abyss<br style="line height:slight;"></div>
-        <div style="position:absolute;width:243px;text-align:center; top:300px;color:white; margin:0 auto; font-family:'solomon_normalregular';font-weight:normal; margin:0 auto;padding:0 auto;font-size:12px;">Koan Soun</div>
-          <div class="carouse-inner">
+              <div class="bg" id="dots"><img src="images/dots@2x.png" class="img-responsive" width="80px" ></div>
+              <div class="bg" id="mute"><input type="image" id="mute" value="pause" src="images/mute@2x.png" class="img-responsive" width="43px" height:"43px"/></div>
+
+
+              <div class="carouse">
+                <div class="song">Abyss<br style="line height:slight;"></div>
+                <div class="artist">Koan Soun</div>
+                <div class="carouse-inner">
                   <div class="pic" style="margin-left:0px;" >
                     <img src="http://i685.photobucket.com/albums/vv219/Metaltim/Feb%202011/image004-1.jpg"class="img-responsive" >
                  </div>
@@ -99,78 +101,60 @@
                   <div class="pic" style="margin-left:0px;  ">
                     <img src="http://static.wixstatic.com/media/5211d8_d0bae92862a14355b176b489109346af.jpg_srz_273_273_85_22_0.50_1.20_0.00_jpg_srz"class="img-responsive" >
                   </div>
-             </div>
+                </div>
 
-      </div>
+              </div>
 
-
-
-              <div style="width:247px; margin-left:60px; height:180px; overflow:hidden; border-top:solid 2px #6967CE ;padding:0px 10px 0px 10px;">
+              <div id="msgboard">
 
                 <div class="message ui-widget-content ui-corner-all"  id="msg1">
                   <div class="test">This one is super old though</div>
-
                 </div>
                 <div class="message ui-widget-content ui-corner-all"  id="msg2">
-
                   <div class="testl" >Killing it J! Straight FYAAH</div>
-
-
-
                  </div>
                 <div class="message ui-widget-content ui-corner-all"  id="msg3" >
-
                    <div class="test">Oh my god! I love this fucking track. Remember Coachella?</div>
-
                  </div>
                 <div class="message ui-widget-content ui-corner-all"  id="msg4" >
                   <div class="testl">Ya that was so much fun</div>
-
                 </div>
                 <div class="message ui-widget-content ui-corner-all"  id="msg5" >
                   <div class="test">How about this track though</div>
-
                 </div>
                 <div class="message ui-widget-content ui-corner-all"  id="msg6" >
-
                   <div class="testl" >Nice. I've heard a couple of his tracks though</div>
-
                 </div>
                 <div class="message ui-widget-content ui-corner-all"  id="msg7">
-
                   <div class="test">He's is playing at Warfield in a weeks right?</div>
-
                 </div>
                 <div class="message ui-widget-content ui-corner-all"  id="msg8">
-
                 <div class="testl" >Wanna go check it out</div>
-
                 </div>
                 <div class="message ui-widget-content ui-corner-all"  id="msg9" >
                   <div class="test">Let's do it</div>
                 </div>
-              </div>
-</div>
-    <div class="col-lg-4 col-sm-3 col-md-2 col-xs-0">
+
+            </div>
           </div>
+          <div class="col-lg-4 col-sm-3 col-md-2 col-xs-0">
+          </div>
+        </div>
       </div>
-    </div>
       <div class="container-fluid">
-
-        <div class="row" style="background:#4E4DA7;border:solid #8A88E3 1px; margin-top:10px;">
-          <div class="col-lg-6 col-xs-12" style="color:white;  padding:39px 0px 48px 48px; overflow:hidden; font-family: 'solomon_normalregular'; font-size:24px;">
-            <span style="font-family: 'solomon_normalregular'; font-size:24px;"> We’re currently in private beta.<br></span>
-                      <span style="font-family: 'solomon_normalregular'; font-size:24px;">Sign up to be notified about the launch!</span>
+        <div  class="row" id="foot1">
+          <div id="beta" class="col-lg-6 col-xs-12">
+            <span> We’re currently in private beta.<br></span>
+                      <span>Sign up to be notified about the launch!</span>
           </div>
 
-          <div class="col-lg-6 col-xs-12" style="color:white; overflow:hidden; padding:43px 55px 43px 0px; font-family: 'solomon_normalregular'; font-size:24px;">
-              <div style="float:right;background:white;padding:0 auto; border-radius:4px; ">  <input type="text" placeholder="EMAIL ADDRESS" style="font-size:12px;margin-top:0px;font-weight:bold;color:black;border-radius:4px; border:none; padding-left:16px; width:413px; height:47px;">
-            <button type="button" class="btn btn-default" style="height:39px; width:100px; font-weight:bold; font-size:12px; border:none; background:#F5A623; margin-top:4px;margin-right:4px;padding-top:10px;">SIGN UP</button></div>
+          <div id="beta-signup" class="col-lg-6 col-xs-12">
+              <div id="inpt">  <input type="text" id="email" placeholder="EMAIL ADDRESS" >
+            <button type="button" id="signup" class="btn btn-default">SIGN UP</button></div>
           </div>
         </div>
 
       </div>
-
 
       <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
