--- a/index.html
+++ b/index.html
@@ -66,15 +66,17 @@
         <div class="row">
           <div class="col-lg-4 col-sm-4 col-md-4 col-xs-0">
           </div>
+          <div id="img-contain">
+          <div id="imgleft">
+            <img src="images/christian@2x1.png"  class="img-responsive" width="273px">
+          </div>
+
+          <div id="imgright">
+            <img src="images/christian@2xy.png" width="273px" >
+          </div>
+        </div>
           <div class="col-lg-4 col-sm-4 col-md-4 col-xs-12">
 
-            <div id="imgleft">
-              <img src="images/christian@2x1.png"  class="img-responsive" width="273px">
-            </div>
-
-            <div id="imgright">
-              <img src="images/christian@2xy.png" width="273px" >
-            </div>
               <div class="bg" id="iphone">
                 <center><img src="images/iphone@2x1.png" class="img-responsive" width="286px"></center>
               </div>
